fix: Logo spacing

--- a/_sass/new-app.scss
+++ b/_sass/new-app.scss
@@ -153,7 +153,7 @@ section.alternate-section {
 
 @keyframes animatedLogoBack {
   from{transform: translateX(0)}
-  to{transform: translateX(6%)}
+  to{transform: translateX(4%)}
 }
 
 // Paper
